--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext.kotlin_version = '1.0.1'
-	ext.spring_boot_version = '1.3.0.RELEASE'
+	ext.spring_boot_version = '1.3.5.RELEASE'
+    ext.springloaded_version = '1.2.0.RELEASE'
     ext.mybatis_spring_boot_version = '1.1.1'
     ext.flyway_version = '3.2.1'
     ext.springfox_swagger2_version = '2.4.0'
@@ -11,6 +12,7 @@ buildscript {
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"  // New
         classpath "org.springframework.boot:spring-boot-gradle-plugin:$spring_boot_version"
+//        classpath "org.springframework:springloaded:$springloaded_version"
     }
 }
 
@@ -46,6 +48,8 @@ repositories {
 dependencies {
     compile("org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version")
     compile("org.springframework.boot:spring-boot-starter-web:$spring_boot_version")
+    compile("org.springframework.boot:spring-boot-starter-security:$spring_boot_version")
+    compile("org.springframework.boot:spring-boot-starter-test:$spring_boot_version")
     compile("org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatis_spring_boot_version")
     compile("org.flywaydb:flyway-core:$flyway_version")
     compile("com.h2database:h2")
